--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
