--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,16 +48,17 @@ dependencies:
   url_launcher: ^6.3.1
   get_it: ^8.0.1
   uuid: ^4.5.1
+  json_annotation: ^4.9.0
+  intl: ^0.19.0
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -79,6 +80,7 @@ flutter:
     - assets/icons/auth/
     - assets/images/splash/
     - assets/images/onboarding/
+    - assets/icons/onboarding/
 
   #   - images/a_dot_ham.jpeg
 
