--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: ^0.19.0
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.4
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
