--- a/agent/pubspec.yaml
+++ b/agent/pubspec.yaml
@@ -2,7 +2,7 @@ name: agent
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,10 +31,25 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.6
+  go_router: ^14.4.1
+  logger: ^2.4.0
+  flutter_svg: ^2.0.14
+  google_fonts: ^6.2.1
+  image_picker: ^1.1.2
+  firebase_core: ^3.7.0
+  firebase_auth: ^5.3.2
+  google_sign_in: ^6.2.2
+  shared_preferences: ^2.3.3
+  get_it: ^8.0.2
+  uuid: ^4.5.1
+  cloud_firestore: ^5.4.5
+  intl: ^0.19.0
+  firebase_storage: ^12.3.5
+  file_picker: ^8.1.4
 
 dev_dependencies:
   flutter_test:
@@ -46,21 +61,25 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.13
+  json_annotation: ^4.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/splash/
+    - assets/icons/auth/
+    - assets/images/home/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
